--- a/package.json
+++ b/package.json
@@ -5,22 +5,21 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "server": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "framer-motion": "^12.23.12",
-    "lucide-react": "^0.540.0",
+    "vue": "^3.3.11",
+    "socket.io-client": "^4.8.1",
+    "express": "^4.18.2",
     "socket.io": "^4.8.1",
-    "vue": "^3.5.18"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.3",
-    "vite": "^7.1.2",
-    "vue-tsc": "^3.0.5"
+    "@vitejs/plugin-vue": "^4.5.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vue-tsc": "^1.8.25"
   }
 }
